crates/ruff_python_parser/tests/snapshots/invalid_syntax@invalid_annotation_generic_named_expression.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/invalid_annotation_generic_named_expression.py
---
## AST

```
Module(
    ModModule {
        range: 0..28,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    range: 0..27,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("f"),
                        range: 4..5,
                    },
                    type_params: Some(
                        TypeParams {
                            range: 5..8,
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 6..7,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 6..7,
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    parameters: Parameters {
                        range: 8..10,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: Some(
                        Named(
                            ExprNamed {
                                range: 15..21,
                                target: Name(
                                    ExprName {
                                        range: 15..16,
                                        id: Name("y"),
                                        ctx: Store,
                                    },
                                ),
                                value: NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 20..21,
                                        value: Int(
                                            3,
                                        ),
                                    },
                                ),
                            },
                        ),
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                range: 24..27,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 24..27,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | def f[T]() -> (y := 3): ...
  |                ^^^^^^ Syntax Error: named expression cannot be used in a type annotation
  |
